packages/design/tailwind/css/components/table.css
.gi-table {
  @apply gi-w-full gi-border-spacing-0 gi-border-collapse gi-text-md;
}

.gi-table-th,
.gi-table-td {
  @apply gi-align-middle gi-pl-1 gi-pr-5 gi-py-2.5 gi-border-b-[gray] gi-border-b gi-border-solid;
}

.gi-table-caption-text {
  @apply gi-text-left gi-mb-4 gi-font-bold;
}

.gi-table-no-data,
.gi-table-loading {
  @apply gi-text-center gi-border-0 gi-py-8 gi-px-4;
}

